--- a/src/components/City.module.css
+++ b/src/components/City.module.css
@@ -11,6 +11,10 @@
   gap: 2rem;
 }
 
+.city::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
 .row {
   display: flex;
   flex-direction: column;
